--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    <!--Titolo e Foto-->
     <h1>Il mio viaggio a Londra</h1>
         <hr>
-<img src="im/img1.png"alt="pexels-bill-emrich-230794-0">
-<img src="im/img1.png"alt="pexels-bill-emrich-230794-1">
-<img src="im/img1.png"alt="pexels-bill-emrich-230794-2">
+<img src="./images/images/pexels-bill-emrich-230794-0.jpg">
+<img src="im/img1.png">
+<img src="im/img1.png">
      
 
 
